<resources>
    <string name="app_name">Contacts</string>
    <string name="action_settings">Settings</string>
    <string name="contact_first">First name:</string>
    <string name="contact_last">Last name:</string>
    <string name="contact_phone">Phone number:</string>
    <string name="contact_image">Choose image</string>
    <string name="choose_image">Click to choose image</string>
    <string name="add_contact">Create new contact</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="favorite">Favorite</string>
    <string name="contact_email">Email</string>
    <string name="name">Name</string>
    <string name="title_activity_maps">Map</string>
    <string name="location">Location</string>
    <string name="picture">Picture</string>
    <string name="info">info</string>

</resources>
